feat: change 2 names

--- a/views/cart/shopping-cart.ejs
+++ b/views/cart/shopping-cart.ejs
@@ -21,17 +21,17 @@
         </div>
     </div> -->
 
-        
+
     <div class="text-center mt-5">
         <div class = "w-75 d-inline-block">
 
-            <% if(shoppingCart.productsArray.length != 0) { %>    
+            <% if(shoppingCart.productsArray.length != 0) { %>
 
              <h6 class="mb-4"><%=session.name%>'s Shopping Cart</h6>
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <tbody>
-                            <% shoppingCart.productsArray.forEach((productObject) => { %>    
+                            <% shoppingCart.productsArray.forEach((productObject) => { %>
                                 <tr>
                                     <td style="vertical-align:middle"><img src="<%=productObject.image%>" style="width:40px"></td>
                                     <td style="vertical-align:middle"><%=productObject.name%></td>
@@ -43,23 +43,22 @@
                                     </td>
                                 </tr>
                                 </tbody>
-                                
-                        <% }); %>    
+
+                        <% }); %>
                     </table>
                 </div>
                 <div>
-                    <a href="/ckeckOut" 
+                    <a href="/ckeckOut"
                     class="btn btn-success float-right mb-5" >Check out</a>
                     <h6 class="float-right mt-1 mr-4">The total price is:&nbsp&nbsp<%= shoppingCart.totalCartPrice%></h6>
-                </div>  
+                </div>
 
             <% } else { %>
-                
+
                <h6 class="mb-4"><%=session.name%>'s Shopping Cart is empty</h6>
                <span>
-                    <p class="d-inline-block">Go back to shop</p>
-                    <a class="btn btn-link" href="/home">Home</a>
-                </span> 
+                    <a class="btn btn-link" href="/home">Go back to shop</a>
+                </span>
             <% } %>
         </div>
     </div>
