--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -7,7 +7,8 @@
 <div class="text-center">
     <% listOfProducts.forEach((product) => { %>
         <div class="card d-inline-block mr-3" style="width:250px; border-color:white">
-            <img src="<%=product.image %>" style="width:250px">
+            <img src="<%= product.image %>" class="image-1" style="width:250px">
+            <img src="<%= product.image2 %>" class="image-2" style="width:250px">
             <div class="caption">
                 <div class="pt-2">
                     <span class="pt-2 text-dark"><%= product.name %></span>
